add tags field to descriptor, some tests
are failing